Pass intent type in extra headers for content URI

On Oreo, ContentResolver.getType() returns "application/octet-stream"
for content uri that is sent from Android Downloads Home, instead of
the registered MIME type. To work around this, we pass the intent
type in extra headers such that content request job can get it.

Bug: 813906
Change-Id: I86c87b0458dc5b4311bcd7ae7248af1ea9df7eaf
Reviewed-on: https://chromium-review.googlesource.com/961560
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Reviewed-by: Maria Khomenko <mariakhomenko@chromium.org>
Reviewed-by: Min Qin <qinmin@chromium.org>
Commit-Queue: Jian Li <jianli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544602}
Former-commit-id: 74b656c180ca06d86caef3cb42df977cdafadf76