chrome/android/javatests/src/org/chromium/chrome/browser/IntentHandlerTest.java
@@ -7,6 +7,7 @@ package org.chromium.chrome.browser;
 import android.content.Context;
 import android.content.Intent;
 import android.net.Uri;
+import android.os.Build;
 import android.os.Bundle;
 import android.os.SystemClock;
 import android.provider.Browser;
@@ -344,5 +345,60 @@ public class IntentHandlerTest {
         String packageName = context.getPackageName();
         String referrer = IntentHandler.constructValidReferrerForAuthority(packageName).getUrl();
         Assert.assertEquals("android-app://" + packageName, referrer);
+    }
+
+    @Test
+    @SmallTest
+    @UiThreadTest
+    @Feature({"Android-AppBase"})
+    public void testRemoveChromeCustomHeaderFromExtraIntentHeaders() throws Throwable {
+        Bundle bundle = new Bundle();
+        bundle.putString("X-Chrome-intent-type", "X-custom-value");
+        Intent headersIntent = new Intent(Intent.ACTION_VIEW);
+        headersIntent.putExtra(Browser.EXTRA_HEADERS, bundle);
+        Assert.assertNull(IntentHandler.getExtraHeadersFromIntent(headersIntent));
+    }
+
+    @Test
+    @SmallTest
+    @Feature({"Android-AppBase"})
+    public void testMaybeAddAdditionalExtraHeaders() {
+        String downloadContentUrl =
+                "content://com.android.providers.downloads.documents/document/1";
+        String otherContentUrl = "content://com.example.org/document/1";
+        Intent intent = new Intent();
+
+        Assert.assertNull(IntentHandler.maybeAddAdditionalExtraHeaders(null, null, null));
+        // Null URL.
+        Assert.assertNull(IntentHandler.maybeAddAdditionalExtraHeaders(intent, null, null));
+        // Null intent.
+        Assert.assertNull(
+                IntentHandler.maybeAddAdditionalExtraHeaders(null, downloadContentUrl, null));
+        // Non-download authority.
+        Assert.assertNull(
+                IntentHandler.maybeAddAdditionalExtraHeaders(intent, otherContentUrl, null));
+        // Null type.
+        Assert.assertNull(
+                IntentHandler.maybeAddAdditionalExtraHeaders(intent, downloadContentUrl, null));
+        // Empty type.
+        intent.setType("");
+        Assert.assertNull(
+                IntentHandler.maybeAddAdditionalExtraHeaders(intent, downloadContentUrl, null));
+
+        intent.setType("text/plain");
+
+        if (Build.VERSION.SDK_INT < Build.VERSION_CODES.O) {
+            Assert.assertNull(
+                    IntentHandler.maybeAddAdditionalExtraHeaders(intent, downloadContentUrl, null));
+            Assert.assertEquals("Foo: bar",
+                    IntentHandler.maybeAddAdditionalExtraHeaders(
+                            intent, downloadContentUrl, "Foo: bar"));
+        } else {
+            Assert.assertEquals("X-Chrome-intent-type: text/plain",
+                    IntentHandler.maybeAddAdditionalExtraHeaders(intent, downloadContentUrl, null));
+            Assert.assertEquals("Foo: bar\nX-Chrome-intent-type: text/plain",
+                    IntentHandler.maybeAddAdditionalExtraHeaders(
+                            intent, downloadContentUrl, "Foo: bar"));
+        }
     }
 }
